2020-05-14  Rolf Ade  <rolf@pointsman.de>

        Added method clearString to the dom command.

2019-12-31  Rolf Ade  <rolf@pointsman.de>

        Updated to expat 2.2.9.

2018-10-12  Rolf Ade  <rolf@pointsman.de>

        Updated to expat 2.2.6.

2018-08-08  Rolf Ade  <rolf@pointsman.de>

        Changed the license to MPL 2.0.

--- Release 0.9.1, 24. Jul. 2018 --- 

2018-07-16  Rolf Ade  <rolf@pointsman.de>

        The package name is tDOM, but it always has been requested by
        [package require tdom] and now the scripted helper commands in
        tdom.tcl are also in the namespace tdom (not anymore in tDOM).
        The new pullparser command is now also in this namespace.
        There are aliases from the old command names to the new one,
        so there must be nothing done; old scripts will run as they
        did. It's just, that you in new code don't have to write
        serveral upcase letters in a row because of tDOM.

2018-07-14  Rolf Ade  <rolf@pointsman.de>

        Updated to expat 2.2.5. Expat now want to use a "good" entropy
        source to salt internal hash table (to reduce the possibility
        of DoS attacts with malicious XML input). Configure tries to
        figure out automatically the most appropriate entropy source
        on your platform. The new configure switch --with-entropy
        gives control over that. The configure switch
        --without-entropy disables all this; expat (and in turn tDOM)
        will use what was used in earlier expat versions.

2018-07-12  Rolf Ade  <rolf@pointsman.de>

        Updated TEA.

2018-05-17  Rolf Ade  <rolf@pointsman.de>

        Added new method attributeNames to domNode (cmds).

2018-05-10  Rolf Ade  <rolf@pointsman.de>

        Added new methods line and column to most pull parser states.

2018-05-04  Rolf Ade  <rolf@pointsman.de>

        More fine grain control about serialization details: new asXML
        options -nogtescape and -noEmptyElementTag.
